# equity-research-engine

./: .gitignore  FMP_ENDPOINTS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_NOTES.md  README.md  SEC_MIGRATION.md  pyproject.toml
config/: config.example.yaml
src/hf_memo/: __init__.py  cli.py  config.py
src/hf_memo/model/: __init__.py  drivers.py  forecast.py
src/hf_memo/providers/: __init__.py  base.py  fmp_provider.py  sec_provider.py
src/hf_memo/report/: memo.py
src/hf_memo/standardize/: __init__.py  mapper_fmp.py  mapper_sec.py  schema.py
src/hf_memo/valuation/: __init__.py  dcf.py  scenarios.py
tests/: __init__.py  test_dcf.py  test_fmp_provider.py  test_forecast.py  test_mapper_sec.py  test_schema.py  test_sec_provider.py
